--- a/src/features/Post/Post.module.css
+++ b/src/features/Post/Post.module.css
@@ -12,6 +12,16 @@
     width: 60rem;
 }
 
+.fetchedCommentsBkgdDrop {
+    position: relative;
+    top: -3rem;
+    z-index: -1;
+    background-color: rgb(196, 196, 196);
+    width: 100%;
+    height: 3rem;
+    margin: 0;
+}
+
 .media, .mediaDarkMode {
     padding: 3rem;
     text-align: left;
